# medical_image_deidentification

./: .gitignore  README.md  dataset.py  deidentify.py  pyproject.toml  requirements.txt  text_detection.py  twix_skullstrip.py
mede/: dataset.py  deidentify.py  dicom_deidentification.py  dicom_skullstrip_defacing.py  rename.py  text_detection.py  wsi_deidentification.py
midi/: deidentify.py  dicom_skullstrip_defacing.py  model.py
midi/mednext/: MedNextV1.py
models/: cResUNet.py
models/layer/: activations.py  losses.py  spectral_blocks.py  spectral_layer.py
tests/: test_deidentify.py  test_rename.py
utils/: utilities.py
