[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "midi"
version = "0.1.0"
authors = [
  {name="Moritz Rempe & Lukas Heine", email="moritz.rempe@uk-essen.de"},
]
description = "De-Identification of Medical Imaging Data: A Comprehensive Tool for Ensuring Patient Privacy"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "scikit-image",
  "deid",
  "nibabel",
  "numpy<2.0.0",
  "opencv_python_headless==4.9.0.80",
  "pandas",
  "Pillow",
  "pydicom==2.3.1",
  "pytesseract",
  "PyYAML",
  "timm",
  "torch==2.2.2",
  "torchio",
  "torchvision",
  "tqdm"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/TIO-IKIM/medical_image_deidentification"
Issues = "https://github.com/TIO-IKIM/medical_image_deidentification/issues"

[project.scripts]
midi-deidentify = "midi.deidentify:main"